--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,19 @@
 /*  --------------------------------------------- Elementos comuns a todas as páginas -------------------------------------------- */
 
+body,
+html {
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: #0f0f0f;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
 }
 
 h1 {
@@ -23,42 +35,69 @@ p {
     font-size: 20px;
     margin-left: 50px;
     margin-right: 50px;
-    margin-top: 50px;
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-right: 20px;
-    margin-left: 20px;
-}
-
-.header img {
-    margin-top: 10px;
-    width: 250px;
-    height: auto;
+    margin-top: 25px;
 }
 
 .navbar {
-    text-align: center;
-    padding: 10px 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.navbar ul {
+.logo img {
+    margin-top: 10px;
+    width: 250px;
+    height: 140px;
+}
+
+.mobile-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 60%;
+    height: 100%;
+    background-color: rgb(129, 93, 153, 0.9);
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.8rem;
+}
+
+.navbar-desktop {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: rgb(129, 93, 153);
     border-radius: 8px;
     font-size: 18px;
-    gap: 40px;
 }
 
-.navbar li a {
+.navbar-mobile {
+    display: flex;
+    list-style: none;
+    flex-direction: column;
+    text-align: center;
+    gap: 1.2rem;
+    width: 80%;
+    padding: 0;
+}
+
+.navbar-mobile li {
+    border-bottom: 1px solid black;
+    padding-bottom: 1.2rem;
+}
+
+.navbar-desktop li a,
+.navbar-mobile li a {
     display: block;
+    font-size: 20px;
     padding: 10px 20px;
     margin: 5px;
     color: black;
@@ -70,17 +109,36 @@ p {
     transition: background-color 0.3s;
 }
 
-.navbar li a:hover {
+.navbar-desktop li a:hover,
+.navbar-mobile li a:hover {
     background-color: black;
     color: white;
 }
 
-footer {
-    bottom: 0;
-    right: 0;
-    color: rgb(207, 207, 130);
-    text-align: right;
-    margin-top: 50px;
+.ham,
+.close {
+    background: none;
+    border: none;
+    color: #FFF;
+    cursor: pointer;
+    display: none
+}
+
+.ham {
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+.close {
+    font-size: 30px;
+    margin-top: 20px;
+    margin-right: 20px;
+    display: block;
+    align-self: end;
+}
+
+.flex {
+    display: flex;
 }
 
 /*  --------------------------------------------- Elementos comuns a todas as páginas -------------------------------------------- */
@@ -219,6 +277,7 @@ figcaption {
 }
 
 #aboutus {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
@@ -240,8 +299,6 @@ figcaption {
     display: inline-flex;
     width: 75px;
     height: 75px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
 
 .aboutus-image a img {
@@ -249,3 +306,55 @@ figcaption {
 }
 
 /*  --------------------------------------------- Elementos exclusivos da contatos -------------------------------------------- */
+
+/*  -------------------------------------------------------- Media queries ---------------------------------------------------- */
+
+/* Mobile */
+
+@media (max-width: 1024px) {
+    html {
+        font-size: 12px;
+    }
+
+    p {
+        color: rgb(207, 207, 130);
+        font-size: 20px;
+        margin-left: 25px;
+        margin-right: 25px;
+        margin-top: 25px;
+    }
+
+    .navbar-desktop {
+        display: none
+    }
+
+    .ham {
+        display: block
+    }
+
+    .logo img {
+        width: 120px;
+        height: 70px;
+    }
+
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    #UVVLogo {
+        margin-top: 0px;
+    }
+
+    #UVVLogo img {
+        width: 400px;
+        height: auto;
+    }
+
+    #aboutus {
+        margin-top: 0px;
+    }
+}
